--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 *.so
 *.dll
 
+c_implementation/main
+c_implementation/GUI_impl
+c_implementation/q_learning
+c_implementation/compile_commands
+
 __pycache__/
 *.pyc
 *.pyo
